--- a/src/components/Main/AboutMe/AboutMe.css
+++ b/src/components/Main/AboutMe/AboutMe.css
@@ -7,6 +7,7 @@
 .about-me_info {
   display: flex;
   justify-content: space-between;
+  padding-top: 66px
 }
 
 .info__article {
@@ -60,6 +61,7 @@
 }
 
 .pages_link {
+  border: none;
   margin: 0;
   padding: 0;
   background-color: transparent;
@@ -68,10 +70,8 @@
   font-style: normal;
   font-weight: 500;
   font-size: 14px;
-  transition: opacity .25s ease-in-out;
-
 }
 
-.pages_link:hover {
-  opacity: .7;
+.pages_link:last-child {
+  padding-left: 20px;
 }
