--- a/src/components/Main/Portfolio/Portfolio.css
+++ b/src/components/Main/Portfolio/Portfolio.css
@@ -1,3 +1,61 @@
 .portfolio {
-
+    padding: 0;
+    margin: 100px 0 125px;
 }
+
+.portfolio__title {
+    padding: 0;
+    margin: 0;
+    font-family: 'Inter', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 1.1;
+    color: #8B8B8B;
+}
+
+.portfolio__pages {
+    padding: 0;
+    margin: 50px 0 0;
+    display: flex;
+    flex-direction: column;
+}
+
+.portfolio__page {
+    width: 100%;
+    padding: 0;
+    margin-bottom: 20px;
+}
+.portfolio__page::after {
+    content: '';
+    display: block;
+    margin-top: 20px;
+    background-color: #424242;
+    width: 100%;
+    height: 1px;
+}
+
+.portfolio__page:last-child {
+    margin-bottom: 0;
+}
+
+.portfolio__page:last-child::after {
+    display: none;
+}
+
+.page__link {
+    margin: 0;
+    padding: 0;
+    background-color: transparent;
+    border: 0;
+    font-family: 'Inter',sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 1.67;
+    letter-spacing: -0.04em;
+    color: #fff;
+    text-align: start;
+}
+
+
