--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,8 +1,12 @@
-.root {
-  padding: 0 70px;
-  margin: 0;
-  background-color: #202020;
+#root {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
+  padding: 0;
+  margin: 0;
+  background-color: #202020;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
 }
