--- a/src/components/Main/AboutProject/AboutProject.css
+++ b/src/components/Main/AboutProject/AboutProject.css
@@ -1,5 +1,7 @@
 .about-project {
-  margin-top: 110px;
+  width: 100%;
+  max-width: 1440px;
+  padding: 110px 70px 141px;
 }
 
 .about-project__articles {
@@ -39,7 +41,6 @@
   height: 36px;
   width: 100%;
   margin-top: 110px;
-  margin-bottom: 141px;
   padding: 0;
 }
 
