--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,8 +1,8 @@
 .main {
-  max-width: 1280px;
   margin: 0;
   padding: 0;
   display: flex;
-  justify-content: center;
   flex-direction: column;
+  align-items: center;
+  width: 100%;
 }
