--- a/src/components/Main/Promo/Promo.css
+++ b/src/components/Main/Promo/Promo.css
@@ -1,14 +1,20 @@
 .promo {
+  max-width: 1440px;
+  width: 100%;
+  margin: 0;
+  padding: 10px 40px 0;
+}
+
+.promo__backplate {
+  margin: 0;
+  padding-bottom: 20px;
+  width: 100%;
+  max-height: 493px;
+  border-radius: 10px;
+  background-color: #272727;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-end;
-  height: 493px;
-  max-width: 1200px;
-  background-color: #272727;
-  margin-top: 20px;
-  border-radius: 10px;
-  padding-bottom: 30px;
 }
 
 .promo__title {
