--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,20 @@
 @import url('./vendor/normalize.css');
 @import url('./vendor/hover-effect.css');
 
+
+
 body,
 body::after,
 body::before {
+  width: 100%;
+  height: 100%;
   margin: 0;
   padding: 0;
-  box-sizing: border-box
+  box-sizing: border-box;
 }
 
-/**{*/
-/*  box-sizing: border-box;*/
-/*  border: 1px red solid;*/
-/*}*/
+*{
+  box-sizing: border-box;
+  /*outline: 1px red solid;*/
+}
 
