--- a/src/components/Main/AboutProject/AboutProject.css
+++ b/src/components/Main/AboutProject/AboutProject.css
@@ -12,7 +12,7 @@
 
 .article {
   padding: 0;
-  margin: 0;
+  margin: 70px 0 0;
   color: #fff;
   font-family: 'Inter', sans-serif;
   font-weight: 400;
@@ -29,6 +29,7 @@
   font-size: 20px;
   letter-spacing: -0.04em;
   font-family: inherit;
+  margin-bottom: 30px;
 }
 
 .article__text {
