--- a/src/components/Main/Techs/Techs.css
+++ b/src/components/Main/Techs/Techs.css
@@ -45,8 +45,10 @@
 .technology__list {
   display: flex;
   flex-direction: row;
+  flex-flow: wrap;
   padding: 0;
   margin: 0 auto;
-  width: 690px;
-  height: 60px;
+  max-width: 699px;
+  width: 100%;
+  min-height: 60px;
 }
