--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -62,3 +62,38 @@
     text-align: right;
     color: #fff;
 }
+
+@media screen and (max-width: 550px) {
+
+    .footer {
+        padding: 0 10px;
+    }
+
+    .footer__bottom {
+        flex-direction: column-reverse;
+        margin-top: 0;
+        margin-bottom: 10px;
+    }
+
+    .footer__nav {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 30px 0;
+    }
+
+    .nav__link {
+        margin-left: 0;
+        margin-bottom: 12px;
+        padding: 0;
+    }
+    .nav__link:last-child{
+        margin: 0;
+        padding: 0;
+    }
+
+    .footer__title {
+        font-size: 12px;
+    }
+
+}
