--- a/src/components/Main/AboutMe/AboutMe.css
+++ b/src/components/Main/AboutMe/AboutMe.css
@@ -8,14 +8,19 @@
 .about-me_info {
   display: flex;
   justify-content: space-between;
-  padding-top: 66px
+  padding-top: 65px
+}
+
+.info__wrap {
+  max-width: 600px;
+  margin-right: 5vw;
 }
 
 .info__article {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  max-width: 600px;
+  justify-content: space-between;
 }
 
 .info__title {
@@ -26,7 +31,7 @@
   line-height: 1.16;
   letter-spacing: -0.04em;
   color: #fff;
-  max-width: 600px;
+  max-width: 100%;
   margin: 0;
   padding: 0;
 }
@@ -38,7 +43,9 @@
   font-size: 18px;
   line-height: 1.11;
   color: #fff;
-  mix-blend-mode: normal;
+  padding: 0;
+  margin-top: 20px;
+  margin-bottom: 25px;
 }
 
 .info__text {
@@ -50,15 +57,16 @@
   font-size: 14px;
   line-height: 1.57;
   color: #fff;
-  mix-blend-mode: normal;
 }
 
 .about-me_image {
+  max-height: 350px;
+  height: 100%;
 }
 
 .about-me_pages {
-  margin-top: 100px;
   padding: 0;
+  margin: 0;
 }
 
 .pages_link {
@@ -74,5 +82,41 @@
 }
 
 .pages_link:last-child {
-  padding-left: 20px;
+  margin-left: 20px;
+}
+
+@media screen and (max-width: 768px) {
+
+  .about-me {
+    padding: 90px 50px 0;
+    width: 100%;
+    margin: 0;
+  }
+
+  .info__wrap {
+    max-width: 360px;
+    max-height: 300px;
+  }
+
+  .info__title {
+    line-height: 1;
+    max-width: 360px;
+    font-size: 40px;
+  }
+
+  .info__subtitle {
+    font-size: 12px;
+    line-height: 1.5;
+    margin-top: 15px;
+    margin-bottom: 20px;
+  }
+
+  .info__text {
+    font-size: 12px;
+    line-height: 1.5;
+  }
+
+  .about-me_image {
+    max-height: 310px;
+  }
 }
