--- a/src/components/Main/AboutProject/AboutProject.css
+++ b/src/components/Main/AboutProject/AboutProject.css
@@ -1,7 +1,7 @@
 .about-project {
   width: 100%;
   max-width: 1440px;
-  padding: 110px 70px 141px;
+  padding: 110px 70px 140px;
 }
 
 .about-project__articles {
@@ -34,6 +34,7 @@
 
 .article__text {
   font-size: 14px;
+  line-height: 1.43;
 }
 
 .about-project__line {
@@ -79,7 +80,7 @@
   width: 100%;
   color: #8B8B8B;
   font-family: 'Inter', sans-serif;
-  font-weight: 400;
+  font-weight: 500;
   font-size: 14px;
   text-align: center;
   content: 'Back-end';
@@ -92,8 +93,87 @@
   width: 100%;
   color: #8B8B8B;
   font-family: 'Inter', sans-serif;
-  font-weight: 400;
+  font-weight: 500;
   font-size: 14px;
   text-align: center;
   content: 'Back-end';
+}
+
+@media screen and (max-width: 1024px) {
+
+  .about-project {
+    padding: 90px 50px 120px;
+  }
+
+  .article__text {
+    font-size: 12px;
+    line-height: 1.5;
+  }
+
+  .about-project__line {
+    margin-top: 90px;
+  }
+
+  .line::after
+  {
+    font-weight: 400;
+  }
+
+  .line__colored::after
+  {
+    font-weight: 400;
+  }
+
+}
+
+@media screen and (min-width: 320px) and (max-width: 768px){
+
+  .about-project {
+    padding: 70px 20px 90px;
+  }
+
+  .about-project__articles {
+    flex-direction: column;
+  }
+
+  .article {
+    padding: 0;
+    margin: 60px 0 0;
+    color: #fff;
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
+    list-style: none;
+    max-width: 550px;
+    width: 100%;
+  }
+
+  .article:first-child {
+    margin-right: 0;
+  }
+
+  .article__title {
+    font-size: 18px;
+  }
+
+  .article__text {
+    font-size: 11px;
+    line-height: 1.45;
+  }
+
+  .about-project__line {
+    margin-top: 60px;
+  }
+
+  .line__text {
+    font-size: 11px;
+  }
+  .line::after
+  {
+    font-size: 11px;
+  }
+
+  .line__colored::after
+  {
+    font-size: 11px;
+  }
 }
