--- a/src/components/Main/NavTab/NavTab.css
+++ b/src/components/Main/NavTab/NavTab.css
@@ -1,6 +1,8 @@
 .nav-tab {
   background-color: #303030;
   border-radius: 10px;
+  min-width: 80px;
+  max-width: 96px;
   width: 100%;
   height: 100%;
   color: #fff;
@@ -9,7 +11,6 @@
   font-size: 12px;
   border: none;
   box-sizing: border-box;
-  margin-left: 10px;
   cursor: pointer;
   display: flex;
   justify-content: center;
@@ -18,4 +19,11 @@
 
 .nav-tab:first-child {
   margin: 0;
+}
+
+@media screen and (min-width: 320px) and (max-width: 768px) {
+
+  .nav-tab {
+    max-width: 82px;
+  }
 }
