--- a/src/components/Main/Promo/Promo.css
+++ b/src/components/Main/Promo/Promo.css
@@ -2,14 +2,13 @@
   max-width: 1440px;
   width: 100%;
   margin: 0;
-  padding: 10px 40px 0;
+  padding: 20px 40px 0;
 }
 
 .promo__backplate {
   margin: 0;
   padding-bottom: 20px;
   width: 100%;
-  max-height: 493px;
   border-radius: 10px;
   background-color: #272727;
   display: flex;
@@ -33,6 +32,48 @@
 .promo__list {
   display: flex;
   flex-direction: row;
-  width: 308px;
+  justify-content: space-between;
+  width: 320px;
   height: 36px;
+}
+
+@media screen and (max-width: 1024px) {
+
+  .promo {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 20px 20px 0;
+  }
+
+  .promo__title {
+    font-size: 40px;
+    line-height: 1.3;
+    margin: 320px 0;
+  }
+
+}
+
+@media screen and (min-width: 320px) and (max-width: 768px) {
+
+  .promo {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 15px 15px 0;
+  }
+
+  .promo__title {
+    font-size: 28px;
+    line-height: 1.3;
+    margin: 210px 0;
+    max-width: 450px;
+  }
+  .promo__list {
+    width: 100%;
+    max-width: 320px;
+    height: 30px;
+    padding: 0 15px;
+  }
+
 }
