--- a/src/components/Main/Techs/Techs.css
+++ b/src/components/Main/Techs/Techs.css
@@ -24,7 +24,7 @@
   font-weight: 400;
   font-size: 50px;
   line-height: 1.16;
-  margin: 90px 0 26px 0;
+  margin: 90px 0 25px 0;
 }
 
 .technology__subtitle {
@@ -44,11 +44,39 @@
 
 .technology__list {
   display: flex;
-  flex-direction: row;
-  flex-flow: wrap;
+  justify-content: space-between;
   padding: 0;
   margin: 0 auto;
-  max-width: 699px;
+  max-width: 700px;
   width: 100%;
   min-height: 60px;
+}
+
+@media screen and (max-width: 768px) {
+
+  .technology {
+    padding: 90px 0;
+  }
+
+  .technology__title {
+    margin: 80px 0 20px 0;
+  }
+
+  .technology__subtitle {
+    font-size: 14px;
+    line-height: 1.5;
+    margin-bottom: 80px;
+  }
+
+}
+
+@media screen and (max-width: 768px) {
+
+  .technology__list {
+    min-height: 50px;
+  }
+
+  .technology_wrap {
+    padding: 0 50px;
+  }
 }
