jsx adaptive done/ startin up header

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -63,7 +63,15 @@
     color: #fff;
 }
 
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 1024px) {
+
+    .footer {
+        padding: 0 50px;
+    }
+}
+
+
+@media screen and (max-width: 767px) {
 
     .footer {
         padding: 0 10px;
