--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,6 @@ body::before {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  /*outline: 1px red solid;*/
+  outline: 1px red solid;
 }
 
