--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0 15px;
   display: flex;
+  align-items: center;
   justify-content: space-between;
   align-content: center;
   max-height: 74px;
@@ -13,14 +14,62 @@
   transition: filter .35s ease-in-out;
 }
 
-.header__logo{
-  max-width: 38px;
-  cursor: pointer;
+.header__wrapper {
+  display: flex;
+  align-items: center
 }
 
-.header__list {
+.header__logo{
+  width: 38px;
+  cursor: pointer;
+  margin-right: 45px;
+}
+
+.header__menu {
+  margin: 0;
+  padding: 0;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 13px;
+  text-align: right;
+}
+
+.menu_link {
+  margin-right: 20px;
+}
+
+.menu_link_active
+{
+  font-weight: 500;
+}
+
+.header__auth {
   display: flex;
   align-items: center;
+}
+
+.profile_button {
+  margin: 0;
+  padding: 8px 20px;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.15;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  text-decoration: none;
+  color: #fff;
+  background-color: #313131;
+  border-radius: 20px;
+  max-height: 32px;
+}
+
+.menu_link {
+  color: white;
+  text-decoration: none;
 }
 
 .shadow {
