--- a/src/components/Main/AboutProject/AboutProject.css
+++ b/src/components/Main/AboutProject/AboutProject.css
@@ -126,7 +126,7 @@
 
 }
 
-@media screen and (min-width: 320px) and (max-width: 768px){
+@media screen and (max-width: 767px){
 
   .about-project {
     padding: 70px 20px 90px;
