--- a/src/components/Main/Promo/Promo.css
+++ b/src/components/Main/Promo/Promo.css
@@ -21,12 +21,16 @@
   font-weight: 400;
   font-size: 50px;
   max-width: 730px;
-  color: #fff;
   padding: 0;
   margin: 150px auto;
   line-height: 1.16;
   text-align: center;
   letter-spacing: -0.04em;
+  color: #fff;
+}
+
+.promo__title_span {
+  color: #3DDC84;
 }
 
 .promo__list {
@@ -54,7 +58,7 @@
 
 }
 
-@media screen and (min-width: 320px) and (max-width: 768px) {
+@media screen and (max-width: 767px) {
 
   .promo {
     height: 100%;
@@ -67,7 +71,7 @@
     font-size: 28px;
     line-height: 1.3;
     margin: 210px 0;
-    max-width: 450px;
+    max-width: 85%;
   }
   .promo__list {
     width: 100%;
