--- a/src/components/Main/Techs/Techs.css
+++ b/src/components/Main/Techs/Techs.css
@@ -44,7 +44,8 @@
 
 .technology__list {
   display: flex;
-  justify-content: space-between;
+  flex-flow: wrap;
+  justify-content: center; /* по мне лучше чем start*/
   padding: 0;
   margin: 0 auto;
   max-width: 700px;
@@ -52,7 +53,27 @@
   min-height: 60px;
 }
 
-@media screen and (max-width: 768px) {
+.technology__link {
+  color: #fff;
+  background-color: #303030;
+  border: none;
+  box-shadow: none;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1;
+  text-align: center;
+  letter-spacing: -0.04em;
+  padding: 20px 0;
+  min-width: 85px;
+  max-width: 90px;
+  margin: 0 5px 10px;
+  border-radius: 10px;
+}
+
+
+@media screen and (max-width: 1024px) {
 
   .technology {
     padding: 90px 0;
@@ -68,10 +89,6 @@
     margin-bottom: 80px;
   }
 
-}
-
-@media screen and (max-width: 768px) {
-
   .technology__list {
     min-height: 50px;
   }
@@ -79,4 +96,35 @@
   .technology_wrap {
     padding: 0 50px;
   }
+
+  .technology__link {
+    max-width: 85px;
+  }
 }
+
+@media screen and (max-width: 767px) {
+
+  .technology__title {
+    font-size: 30px;
+    margin: 60px 0 25px 0;
+  }
+
+  .technology__subtitle {
+    font-size: 11px;
+    line-height: 1.45;
+    margin-bottom: 50px;
+  }
+
+  .technology_wrap {
+    padding: 0 20px;
+  }
+
+  .technology__list {
+    max-width: 70%;
+  }
+}
+
+
+
+
+
