started movies jsx

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
 @import url('./vendor/normalize.css');
 @import url('./vendor/hover-effect.css');
 
-
-
 body,
 body::after,
 body::before {
@@ -11,12 +9,13 @@ body::before {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background-color: #202020;
 }
 
 *{
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  outline: 1px red solid;
+  /*outline: 1px red solid;*/
 }
 
