--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -1,23 +1,58 @@
 .movies-card {
     display: flex;
     flex-direction: column;
-    background: #222222;
-    box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.08);
+    background-color: #222222;
+    margin: 0;
+    padding: 0;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.08);
     border-radius: 6px;
 }
 
 .movies-card__header {
-
+    font-family: 'Inter',sans-serif;
+    font-style: normal;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 18px;
 }
 
 .movies-card__title {
-
+    font-family: inherit;
+    font-weight: 500;
+    font-size: 15px;
+    color: #fff;
 }
 
 .movies-card__time {
-
+    font-family: inherit;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 13px;
+    text-align: right;
+    color: #8B8B8B;
 }
 
 .movies-card__image {
+    width: 100%;
+    max-height: 200px;
+}
 
+.movies-card__button {
+    color: #fff;
+    font-family: 'Inter', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    text-align: center;
+    margin: 20px auto;
+    width: 100px;
+    height: 30px;
+    border: none;
+    border-radius: 30px;
+    background-color: #313131;
+}
+
+.button__is-saved {
+    background-color: #EE3465;
 }
