--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -35,7 +35,6 @@
 
 .movies-card__image {
     width: 100%;
-    max-height: 200px;
 }
 
 .movies-card__button {
@@ -55,4 +54,13 @@
 
 .button__is-saved {
     background-color: #EE3465;
+}
+
+@media screen and (max-width: 768px) {
+    .movies-card__title {
+        font-size: 12px;
+    }
+    .movies-card__time {
+        font-size: 10px;
+    }
 }
