--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @import url('./vendor/normalize.css');
-@import url('./vendor/hover-effect.css');
+@import url('./vendor/css-effects.css');
 
 body,
 body::after,
