--- a/src/components/SearchForm/FilterCheckbox/FilterCheckbox.css
+++ b/src/components/SearchForm/FilterCheckbox/FilterCheckbox.css
@@ -59,3 +59,9 @@ input:checked + .slider:before {
     line-height: 1.4;
     color: #fff;
 }
+
+@media screen and (max-width: 767px){
+    .wrapper {
+        margin-top: 70px;
+    }
+}
