--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,42 +1,86 @@
 .profile {
-    font-family: 'Inter', sans-serif;
-    color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 85vh;
 }
 
-.profile__title{
+.profile__wrapper {
+    font-family: 'Inter', sans-serif;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    width: 410px;
+}
+
+.profile__title {
     font-family: inherit;
     font-weight: 500;
     font-style: normal;
     font-size: 24px;
     padding: 0;
     margin: 0;
+    text-align: center;
 }
 
 .profile__info {
     display: flex;
     flex-direction: column;
     padding: 0;
-    margin: 0;
+    margin: 120px 0 220px 0 ;
     font-size: 11px;
     max-width: 410px;
 }
 
-.divider {
-    margin: 0;
-    padding: 0;
-    display: block;
-    width: 100%;
-    height: 100px;
-}
-
-.profile__info_str {
+.profile__info_line {
+    font-family: inherit;
+    font-style: normal;
+    font-size: 11px;
+    display: flex;
+    justify-content: space-between;
     padding: 0;
     margin: 0;
     font-weight: 400;
-    font-size: 11px;
 }
 
-.profile__info_str::before {
-    content: 'Имя';
+.line__header {
+    font-family: inherit;
+    font-weight: 500;
+    display: block;
+    text-align: left;
+    padding: 0;
+    margin: 0;
+    width: 30%;
+}
 
+.line__text {
+    font-family: inherit;
+    font-weight: 400;
+    display: block;
+    text-align: right;
+    padding: 0;
+    margin: 0;
+    width: 30%;
+}
+
+
+.line__divider {
+    margin: 15px 0;
+    padding: 0;
+    width: 100%;
+    height: 1px;
+    background-color: #424242;
+}
+
+.profile__button { /* тут надо решить с width, глупо как то 100% на десктопе */
+    margin: 0;
+    padding: 0;
+    background-color: transparent;
+    border: none;
+    color: #fff;
+}
+
+.profile__button:last-child {
+    margin-top: 15px;
+    color: #EE3465;
 }
