--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -20,7 +20,8 @@
   align-items: center
 }
 
-.header__logo{
+.header__logo {
+  -webkit-tap-highlight-color:  rgba(255, 255, 255, 0);
   width: 38px;
   cursor: pointer;
   margin-right: 45px;
