--- a/src/components/SearchForm/FilterCheckbox/FilterCheckbox.css
+++ b/src/components/SearchForm/FilterCheckbox/FilterCheckbox.css
@@ -16,6 +16,7 @@
 }
 
 .slider {
+    -webkit-tap-highlight-color:  rgba(255, 255, 255, 0);
     position: absolute;
     cursor: pointer;
     top: 0;
