--- a/src/index.css
+++ b/src/index.css
@@ -12,11 +12,17 @@ body::before {
   background-color: #202020;
 }
 
-
 *{
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  outline: 1px red solid;
+  /*outline: 1px red solid;*/
 }
 
+input[type="search"] {
+  -webkit-appearance: none;
+}
+
+::-webkit-search-cancel-button {
+  -webkit-appearance: none;
+}
