--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -29,7 +29,6 @@
     padding: 0;
     margin: 120px 0 220px 0 ;
     font-size: 11px;
-    max-width: 410px;
 }
 
 .profile__info_line {
@@ -43,24 +42,24 @@
     font-weight: 400;
 }
 
-.line__header {
+.info_line__header {
     font-family: inherit;
     font-weight: 500;
     display: block;
     text-align: left;
     padding: 0;
     margin: 0;
-    width: 30%;
+    max-width: 49%;
 }
 
-.line__text {
+.info_line__text {
     font-family: inherit;
     font-weight: 400;
     display: block;
     text-align: right;
     padding: 0;
     margin: 0;
-    width: 30%;
+    max-width: 49%;
 }
 
 
@@ -72,6 +71,11 @@
     background-color: #424242;
 }
 
+.profile__buttons {
+    display: flex;
+    flex-direction: column;
+}
+
 .profile__button {
     margin: 0;
     padding: 0;
@@ -80,9 +84,31 @@
     color: #fff;
     width: fit-content;
     align-self: center;
+    font-family: inherit;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 13px;
 }
 
 .profile__button:last-child {
     margin-top: 15px;
     color: #EE3465;
+}
+
+@media screen and (max-width: 475px) {
+    .profile__wrapper {
+        width: 100vw;
+        padding: 0 30px;
+    }
+
+    .profile__button {
+        font-size: 12px;
+    }
+
+    .profile__buttons {
+        position: absolute;
+        bottom: 40px;
+        left: 50%;
+        transform: translate(-50%, 0);
+    }
 }
