--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -36,6 +36,7 @@
 }
 
 .search__input {
+    text-transform: capitalize;
     margin-left: 10px;
     padding-right: 25px;
     width: 100%;
@@ -50,6 +51,7 @@
 }
 
 .search__input::placeholder {
+    text-transform: capitalize;
     color: #8B8B8B;
     font-family: inherit;
     transition: opacity .35s ease-in-out;
