--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,8 @@ input[type="search"] {
 ::-webkit-search-cancel-button {
   -webkit-appearance: none;
 }
+
+input[type="password"]
+{
+  -webkit-text-security: disc;
+}
