login/reg adaptive pages

--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,4 +1,4 @@
-.register {
+.login {
     width: 100vw;
     height: 100vh;
     font-family: 'Inter', sans-serif;
@@ -9,22 +9,22 @@
     align-items: center;
 }
 
-.register__wrapper {
+.login__wrapper {
     width: 410px;
 }
 
-.register__logo_link {
+.login__logo_link {
     width: fit-content;
     height: fit-content;
 }
 
-.register__logo {
+.login__logo {
     width: 38px;
     padding: 0;
     margin: 0;
 }
 
-.register__title {
+.login__title {
     margin: 40px 0;
     padding: 0;
     font-weight: 500;
@@ -32,24 +32,27 @@
 }
 
 @media screen and (max-width: 475px) {
-    .register {
+    .login{
         width: 100vw;
         padding: 0 30px;
         align-items: flex-start;
         margin-top: 60px;
     }
 
-    .register__wrapper {
+    .login__wrapper {
         display: flex;
         flex-direction: column;
     }
 
-    .register__logo_link {
+    .login__logo_link {
         align-self: center;
     }
 
-    .register__title {
+    .login__title {
         align-self: center;
+    }
+
+    .login__title {
         margin: 50px 0 80px;
     }
 }
