--- a/src/components/FormElement/FormElement.css
+++ b/src/components/FormElement/FormElement.css
@@ -5,7 +5,15 @@
     font-style: normal;
 }
 
+.form__nav {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+
 .form__submit {
+    border: none;
     padding: 0;
     margin-top: 140px;
     margin-bottom: 15px;
@@ -27,4 +35,22 @@
 .form__under-submit-link {
     text-decoration: none;
     color: #4285F4;
+}
+
+@media screen and (max-width: 475px) {
+    .form__submit {
+        font-size: 12px;
+    }
+
+    .form__under-submit {
+        font-size: 12px;
+    }
+
+    .form__nav {
+        padding: 0 30px;
+        position: absolute;
+        bottom: 30px;
+        left: 50%;
+        transform: translate(-50%, 0);
+    }
 }
