--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -20,7 +20,7 @@
     font-style: normal;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: baseline;
     padding: 15px 20px;
     height: 80px;
 }
@@ -30,6 +30,7 @@
     font-weight: 500;
     font-size: 15px;
     color: #fff;
+    max-width: 75%;
 }
 
 .movies-card__time {
@@ -39,6 +40,8 @@
     font-size: 13px;
     text-align: right;
     color: #8B8B8B;
+    display: flex;
+    flex-flow: column;
 }
 
 .movies-card__wrapper_image {
