--- a/src/components/FormElement/FormElementInput/FormElementInput.css
+++ b/src/components/FormElement/FormElementInput/FormElementInput.css
@@ -44,8 +44,9 @@
     padding: 0;
     margin: 10px 0;
     font-size: 10px;
+    line-height: 1;
     color: #EE3465;
-    min-height: 12px;
+    min-height: 20px;
 }
 
 .form-element__error::first-letter {
