--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -1,6 +1,6 @@
 .register {
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     font-family: 'Inter', sans-serif;
     font-style: normal;
     color: #fff;
