--- a/src/components/FormElement/FormElement.css
+++ b/src/components/FormElement/FormElement.css
@@ -13,6 +13,7 @@
 
 .form__submit {
     border: none;
+    border-top: 3px #5897FE solid;
     padding: 0;
     margin-top: 140px;
     margin-bottom: 15px;
