--- a/src/components/FormElement/FormElementInput/FormElementInput.css
+++ b/src/components/FormElement/FormElementInput/FormElementInput.css
@@ -40,6 +40,10 @@
     background-color: #424242;
 }
 
+.form-element__divider.error {
+    background-color: #EE3465;
+}
+
 .form-element__error {
     padding: 0;
     margin: 10px 0;
