--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -52,6 +52,9 @@
 }
 
 .header__button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding: 5px 12px;
   min-width: 55px;
   min-height: 25px;
