--- a/src/components/SearchForm/FilterCheckbox/FilterCheckbox.css
+++ b/src/components/SearchForm/FilterCheckbox/FilterCheckbox.css
@@ -2,6 +2,11 @@
     display: flex;
 }
 
+.wrapper.disabled {
+    opacity: .3;
+}
+
+
 .switch {
     position: relative;
     display: inline-block;
